<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/jerry_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:padding="1dp"
        android:scaleType="centerCrop"
        android:src="@drawable/jerry_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedImageStyle"
        app:strokeColor="@color/border_color"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/welcome"
        style="@style/TextView.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4.5dp"
        android:text="@string/greeting"
        app:layout_constraintBottom_toBottomOf="@+id/jerry_icon"
        app:layout_constraintStart_toEndOf="@+id/jerry_icon"
        app:layout_constraintTop_toTopOf="@+id/jerry_icon"
        app:layout_constraintVertical_bias="0.037">
    </TextView>

    <TextView
        android:id="@+id/welcomeQA"
        style="@style/TextView.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/which_tom_do_you_want_to_buy"
        android:textColor="@color/textGray"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome">
    </TextView>

    <ImageView
        android:id="@+id/notification_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/notification_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/welcomeQA"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <EditText
        android:id="@+id/et_first_name"
        style="@style/Font.Regular"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/search_normal"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/search_about_tom"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:textColor="@color/textGray"
        android:textColorHint="@color/textGray"
        app:layout_constraintEnd_toStartOf="@+id/setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeQA" />

    <ImageView
        android:id="@+id/setting"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_icon">
    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/offer_card_outer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_first_name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/offer_card"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/card_bg"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/text_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:paddingEnd="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/offer_title"
                    style="@style/TextView.SemiBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/buy_1_tom_and_get_2_for_free"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/offer_subtitle"
                    style="@style/TextView.Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:alpha="0.8"
                    android:paddingBottom="12dp"
                    android:text="@string/adopt_tom_free_fail_free_guarantee"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="113dp"
                android:layout_height="150dp"
                android:src="@drawable/group_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/tom_image"
                app:layout_constraintTop_toTopOf="parent">
            </ImageView>

            <ImageView
                android:id="@+id/tom_image"
                android:layout_width="120dp"
                android:layout_height="115.5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/tom_"
                android:translationX="-5dp"
                android:translationY="-16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/TextView.SemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/cheap_tom_section"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_card_outer">
    </TextView>

    <TextView
        android:id="@+id/textView2"
        style="@style/TextView.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/view_all"
        android:textColor="@color/blue_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView">

    </TextView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/arrow_right_04"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <GridLayout
        android:id="@+id/tomGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:columnCount="2"
        android:gravity="center_vertical"
        android:rowCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <!-- Tom Card 1 -->
        <include layout="@layout/tom_card_sport" />

        <!-- Tom Card 2 -->
        <include layout="@layout/tom_card_lover" />

        <!-- Tom Card 3 -->
        <include layout="@layout/tom_card_bomb" />

        <!-- Tom Card 4 -->
        <include layout="@layout/tom_card_sleeping" />

        <!-- Tom Card 5 -->
        <include layout="@layout/tom_card_frozen" />

        <!-- Tom Card 6 -->
        <include layout="@layout/tom_card_spy" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
